--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,37 @@
 {
 	"manifest_version": 2,
-	"name": "One Clipboard",
-	"description": "选中文本，自动复制到剪切板",
+	"name": "One-Clipboard",
+	"description": "ctrl+c的内容，这里为你保留历史记录。",
 	"version": "0.0.1",
 	"author": "dengyongqing@aliyun.com",
 	"icons": {
-		"16": "images/copy.jpg"
+		"16": "images/copy.png",
+		"48": "images/copy.png",
+		"128": "images/copy.png"
 	},
 	"permissions": ["tabs"],
-	"browser_action": {
-		"default_title": "选中文本，自动复制到剪切板"
+	// 普通页面能够直接访问的插件资源列表，如果不设置是无法直接访问的
+	"web_accessible_resources": ["js/inject.js"],
+	// 浏览器右上角图标设置，browser_action、page_action、app必须三选一
+	"browser_action": 
+	{
+		"default_icon": "images/copy.png",
+		// 图标悬停时的标题，可选
+		"default_title": "这是一个示例Chrome插件",
+		"default_popup": "popup.html"
 	},
 	"content_scripts": [{
 		"matches": ["*://*/*"],
-		"js": ["one_clipboard.js"]
-	}]
+		"js": ["js/jquery-3.3.1.min.js", "one_clipboard.js"],
+		// "css": ["css/custom.css"],
+		// 代码注入的时间，可选值： "document_start", "document_end", or "document_idle"，最后一个表示页面空闲时，默认document_idle
+		"run_at": "document_start"
+	}],
+	// 会一直常驻的后台JS或后台页面
+	"background":
+	{
+		// 2种指定方式，如果指定JS，那么会自动生成一个背景页
+		// "page": "background.html"
+		"scripts": ["js/jquery-3.3.1.min.js", "js/background.js"]
+	}
 }
